BREAKING CHANGES IN HEAD OR EXPERIMENTAL                    *news-breaking-dev*

              ====== Remove this section before release. ======

The following changes to UNRELEASED features were made during the development
cycle (Nvim HEAD, the "master" branch).

EXPERIMENTS

• Removed `vim.loader.disable()`. Use `vim.loader.enable(false)` instead.

OPTIONS

• 'jumpoptions' flag "unload" has been renamed to "clean".
• The `msghistory` option has been removed in favor of 'messagesopt'.

==============================================================================
BREAKING CHANGES                                                *news-breaking*

These changes may require adaptations in your config or plugins.

API

• Improved API "meta" docstrings and :help documentation.
• `vim.rpcnotify(0)` and `rpcnotify(0)` broadcast to ALL channels. Previously
  they would "multicast" only to subscribed channels (controlled by
  `nvim_subscribe()`). Plugins and clients that want "multicast" behavior must
  now maintain their own list of channels.
  • In the future, |vim.rpcnotify()| may accept a list of channels, if there
    is demand for this use-case.
• "Dictionary" was renamed to "Dict" internally and in the RPC |api-metadata|.
  This is not expected to break clients because there are no known clients
  that actually use the `return_type` field or the parameter type names
  reported by |--api-info| or |nvim_get_api_info()|.
• |nvim_open_win()| supports a `mouse` field that allows configuring mouse
  interaction with the window separately from `focusable` field.
• Renamed `nvim__id_dictionary` (unsupported/experimental API) to
  `nvim__id_dict`.

BUILD

On Windows, only building with the UCRT runtime is supported.

DEFAULTS

• |]d-default| and |[d-default| accept a count.
• |[D-default| and |]D-default| jump to the first and last diagnostic in the
  current buffer, respectively.
• 'number', 'relativenumber', 'signcolumn', and 'foldcolumn' are disabled in